[package]
name = "connect-sdk-rust"
version = "0.1.0"
edition = "2021"
authors = ["Dom Rodriguez (shymega) <shymega@shymega.org.uk>"]
keywords = ["api-client", "1password", "api", "passwords"]
categories = ["api-client"]
license = "MIT"
publish = false
description = "Rust SDK for 1Password Connect"
readme = "/README.md" # to be populated
repository = "https://github.com/shymega/connect-sdk-rust.git"
homepage = "https://github.com/shymega/connect-sdk-rust/wiki" # to be populated

[lib]
name = "connect_sdk_rust"
path = "src/lib.rs"

[features]
default = []

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.18"

[dependencies.ureq]
version = "2.6.2"
features = ["json", "charset"]
